# hexablock

./: CMakeLists.txt  Doxyfile  HEXABLOCK_version.h.in  INSTALL  Makefile.am  README  SalomeHEXABLOCKConfig.cmake.in  aclocal.m4  build_configure  clean_configure  configure  configure.ac  cppunit-report.xml
doc/: CMakeLists.txt  Makefile  Makefile.am  annexe.rst  block_method.rst  cad.rst  conf.py  conf.py.in  creategrids.rst  dev_guide.html  dev_guide.txt  full_example_bridle.rst  general.rst  gui.rst  gui_add_geometry.rst  gui_asso_quad_to_geom.rst  gui_asso_vertex_to_geom.rst  gui_association.rst  gui_blocks_for_cyl_pipe.rst  gui_component.rst  gui_cut_hexa.rst  gui_cyl.rst  gui_disc_elmts.rst  gui_discret_law.rst  gui_document.rst  gui_edge.rst  gui_elements.rst  gui_groups.rst  gui_hemisphere.rst  gui_hexahedron.rst  gui_make_elmts.rst  gui_make_symmetry.rst  gui_merge_elmts.rst  gui_mesh.rst  gui_modify_elmts.rst  gui_modify_symmetry.rst  gui_pipe.rst  gui_prism_join_quad.rst  gui_propag.rst  gui_quad_revolution.rst  (+49 more)
doc/_static/: verif_png
doc/cas_test_python/: BIELLE.py
doc/pyplots/: BIELLE.py  BIELLE1.py  bielle.py  bielle_JPL.py  bride.py  process_vtk.py  test_cut.py  test_disconnect.py  test_join_quads.py  test_make_cart_grid.py  test_make_cyl_grid.py  test_make_cylinder.py  test_make_elmts_transform.py  test_make_pipe.py  test_make_spher_grid.py  test_prism_quads.py  test_propagation.py
doc/test_doc/: update_tests.sh
doc/test_doc/cartesian_grid/: cartesian_grid.py
doc/test_doc/cutHexa/: cut_hexa.py
doc/test_doc/cut_hexa/: cut_hexa.py
doc/test_doc/cylinder/: cylinder.py  cylinders.py
doc/test_doc/cylinder_pipe/: make_cylinder.py  make_cylinders.py  make_pipe.py  make_pipes.py
doc/test_doc/edge/: edge.py
doc/test_doc/extrudeQuad/: extrude_quad.py
doc/test_doc/grid/: cartesian_grid.py  cylindrical_grid.py  irregular_cylindrical.py  spherical_grid.py  spherical_grid2.py
doc/test_doc/hemisphere/: concentric.py  rind.py  sphere.py
doc/test_doc/hemispherical_rind/: hemispherical_grid.py  partial_hemispherical_grid.py  partial_rind_grid.py  rind_grid.py
doc/test_doc/hexa/: hexa.py
doc/test_doc/joinQuad/: join_quad.py
doc/test_doc/make_symmetry/: make_sym_line.py  make_sym_plane.py  make_sym_point.py
doc/test_doc/make_transformation/: make_rotation.py  make_scale.py  make_translation.py
doc/test_doc/pipe/: pipe.py  pipes.py
doc/test_doc/prism_quad_join/: join_quads.py  prism_quads.py  prism_quads_vec.py
doc/test_doc/quad/: quad.py
doc/test_doc/quadRevolution/: revolution_quad.py
doc/test_doc/quad_revolution/: make_grid.py  revolution.py
doc/test_doc/replace_hexa/: replace_hexa.py
doc/test_doc/test_cone/: test_cone.py
src/HEXABLOCK/: CMakeLists.txt  Hex.cxx  Hex.hxx  HexAnaQuads.hxx  HexAssoEdge.cxx  HexAssoEdge.hxx  HexBiCylinder.cxx  HexBiCylinder.hxx  HexBiCylinderShape.cxx  HexBiCylinderShape.hxx  HexCloner.cxx  HexCloner.hxx  HexCramer.hxx  HexCrossElements.cxx  HexCrossElements.hxx  HexCrossElements_build.cxx  HexCylinder.cxx  HexCylinder.hxx  HexDiagnostics.hxx  HexDocument.cxx  HexDocument.hxx  HexDocument_Xml.cxx  HexDocument_asso.cxx  HexDocument_del.cxx  HexDocument_quads.cxx  HexDocument_skin.cxx  HexDocument_tools.cxx  HexDocument_trans.cxx  HexDocument_v6.cxx  HexDummyCad.hxx  HexDumpStudy.cxx  HexDumpStudy.hxx  HexEdge.cxx  HexEdge.hxx  HexEdgeShape.cxx  HexEdgeShape.hxx  HexElements.cxx  HexElements.hxx  HexElements_asso.cxx  HexElements_bis.cxx  (+80 more)
src/HEXABLOCK/work/: umake  (+3 more)
src/HEXABLOCKGUI/: AddShapeDialog_QTD.ui  CMakeLists.txt  ComputeMesh_QTD.ui  CutEdge_QTD.ui  Cylinder_QTD.ui  Disconnect_QTD.ui  EdgeAssoc_QTD.ui  Edge_QTD.ui  Group_QTD.ui  HEXABLOCKGUI.cxx  HEXABLOCKGUI.h  HEXABLOCKGUI.hxx  HEXABLOCKGUI_Browser.cxx  HEXABLOCKGUI_Browser.hxx  HEXABLOCKGUI_Data.cxx  HEXABLOCKGUI_Data.hxx  HEXABLOCKGUI_DataModel.cxx  HEXABLOCKGUI_DataModel.hxx  HEXABLOCKGUI_DataObject.cxx  HEXABLOCKGUI_DataObject.hxx  HEXABLOCKGUI_Displayer.cxx  HEXABLOCKGUI_Displayer.hxx  HEXABLOCKGUI_DocumentDelegate.cxx  HEXABLOCKGUI_DocumentDelegate.hxx  HEXABLOCKGUI_DocumentGraphicView.cxx  HEXABLOCKGUI_DocumentGraphicView.hxx  HEXABLOCKGUI_DocumentItem.cxx  HEXABLOCKGUI_DocumentItem.hxx  HEXABLOCKGUI_DocumentModel.cxx  HEXABLOCKGUI_DocumentModel.hxx  HEXABLOCKGUI_DocumentPanel.cxx  HEXABLOCKGUI_DocumentPanel.hxx  HEXABLOCKGUI_DocumentSelectionModel.cxx  HEXABLOCKGUI_DocumentSelectionModel.hxx  HEXABLOCKGUI_Exception.cxx  HEXABLOCKGUI_Exception.hxx  HEXABLOCKGUI_Export.hxx  HEXABLOCKGUI_GraphicViewsHandler.cxx  HEXABLOCKGUI_GraphicViewsHandler.hxx  HEXABLOCKGUI_Model.cxx  (+58 more)
src/HEXABLOCK_I/: HEXABLOCK.cxx  HEXABLOCK.hxx  HEXABLOCK_1.cxx  HexBiCylinder_impl.cxx  HexBiCylinder_impl.hxx  HexCrossElements_impl.cxx  HexCrossElements_impl.hxx  HexCylinder_impl.cxx  HexCylinder_impl.hxx  HexDocument_impl.cxx  HexDocument_impl.hxx  HexEdge_impl.cxx  HexEdge_impl.hxx  HexElements_impl.cxx  HexElements_impl.hxx  HexGroup_impl.cxx  HexGroup_impl.hxx  HexHexa_impl.cxx  HexHexa_impl.hxx  HexLaw_impl.cxx  HexLaw_impl.hxx  HexNewShape_impl.cxx  HexNewShape_impl.hxx  HexPipe_impl.cxx  HexPipe_impl.hxx  HexPropagation_impl.cxx  HexPropagation_impl.hxx  HexQuad_impl.cxx  HexQuad_impl.hxx  HexVector_impl.cxx  HexVector_impl.hxx  HexVertex_impl.cxx  HexVertex_impl.hxx  Makefile.am  hexablock.py
src/HEXABLOCK_SWIG/: CMakeLists.txt  Makefile.am  hexablock.py  hexablock_swig.i  hexablock_swig.py  hexablock_swig_wrap.cc  make_swig
src/TEST_CPP/: CMakeLists.txt  HexEdgeTest.cxx  HexEdgeTest.hxx  HexTest.hxx  HexVertexTest.cxx  HexVertexTest.hxx  Makefile.am  Makefile.orig.am  ModelTest.cxx  ModelTest.hxx  Test_HEXABLOCK.cxx  test_hexa1.cxx  test_quads.cxx  test_tools.cxx  test_unit.hxx
src/TEST_PY/: BIELLE.py  BRIDE.py  CMakeLists.txt  INTER_3_CYLINDRE.py  Makefile.am  TUYAU_COURBE.py  Test_HEXABLOCK.py  bielle.py  bielle_variante.py  bride.brep  bride.py  crank.stp  foo.py  test_BIELLE_bad_assoc.py  test_BIELLE_no_assoc.py  test_HEXABLOCK.py  test_INTER_3_CYLINDRE_no_assoc.py  test_TUYAU_COURBE_no_assoc.py  test_TUYAU_COURBE_weird_assoc.py  test_distrib.py
(+221 files in other folders)
